# ce-toolbox

./: README.md
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  github-offboarding-binary-build.yml
ad-cloud-user-sanitycheck/: README.md
athena-query-tooling/service-account-usage/: README.md  go.mod  go.sum  main.go
aws-account-manifests-utils/orphan-terraform-resources/: README.md  orphan.py
aws-scripts/: aws-rs-scan.sh
aws-sso-usage-report-gen/: .gitignore  build.sh  go.mod  main.go
aws-sso-usage-report-gen/cmds/: download.go  general.go  root.go  user.go
capability-limitrange/: README.md  bulk-apply-limitrange.sh  limitrange.yaml
capability-logs-role/: README.md
docker-python/: Dockerfile
dynamodb_pitr_status_notifier/: fetch_backup_stats.sh  mail.tpl  main.py  template.tpl
ecr-permission-check/: README.md  check.py  requirements
eks-cluster-scripts/: README.md
eks-sandbox-cluster/: eks-sandbox.sh
email-generator/: .gitignore  README.md  email-gen  go.mod  go.sum  main.go  mass.go  mass.json.example  vars.json
get-terraform-provider-versions/: pyproject.toml
github-branch-protection/: README.md  pyproject.toml  scan_private_repos_for_secrets.py  scan_repos_for_secrets.py
github-branch-protection/github/: branch_protection.py
k8s-service-account-config-to-ssm/: README.md  azure-pipelines.yml  kube-config-generator.ps1  kube-config-generator.sh  kube_config_generator.py
offboarding/github/: .gitignore  Cargo.toml  README.md
offboarding/github/src/: main.rs
update-federation-metadata/: README.md
(+8 files in other folders)
