[package]
name = "github-offboarding"
version = "0.1.0"
authors = ["Emil H. Clausen <sequoiia@hummel.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.17.0"
tokio = { version = "^1", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
futures = "^0.3"